--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: norse;
+	src: url(/Norse-Bold.otf);
+}
+
+
 */
 
 html, body, div, span, applet, object, iframe,
@@ -27,6 +33,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	margin: 0;
+	padding:0;
 }
 ol, ul {
 	list-style: none;
@@ -43,11 +51,116 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-.middle{
-    display: flex;
-    flex-direction: column;
-}
+
 img{
-    width: min(400px,100%);
+    width: 25vw;
     height: 100%;
+}
+
+body{
+	display: flex;
+	flex-direction: row;
+	height: 100vh;
+	padding: 0px;
+}
+li{
+	display: flex;
+	flex-direction: column;
+}
+ul{
+	display: flex;
+}
+.rightSide> p{
+	padding: 5rem;
+	font-weight: 600;
+	font-size: 25px;
+	text-align: left;
+	width: 60%;
+	
+}
+.rightSide{
+	background-color: rgb(240, 240, 240);
+	width: 100%;
+	
+}
+form{
+	background-color: rgb(255, 255, 255);
+	padding-top:2rem ;
+	padding-bottom:2rem;
+	box-shadow: 4px 9px 11px 2px rgb(195 197 199)
+}
+.foot{
+	background-color: rgb(240, 240, 240);
+	position: relative;
+	box-shadow: 10px;
+	margin-top:20px;
+}
+.foot > button{
+	position: absolute;	
+	left: 5rem;
+	top: 4rem;
+	padding: 16px;
+	width: 16rem;
+	background-color: rgb(27, 73, 27);
+	border-radius: 10px;
+	color: white;
+	font-size: 20px;
+	border: 1px;
+}
+.foot > p{
+	position: absolute;
+	left: 5rem;
+	top: 7rem;
+	font-size: 20px;
+
+}
+input{
+	width: 20rem;
+	padding:10px;
+	margin-left: 3rem;
+	border-radius: 10px;
+	border-color: rgb(195, 197, 199);
+	font-size: 1rem;
+	box-sizing: border-box;
+	border-style: solid;
+}
+label{
+	padding-left:3rem;
+	padding-bottom: 0rem;
+	font-weight: 500;
+	color: rgb(80, 65, 65);
+}
+form header{
+	padding-left: 5rem;
+	margin-left: 5px;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+	text-align: left;
+	font-size: 25px;
+	font-weight: 500;
+}
+.leftSideBar{
+	height: 100vh;
+	padding: 0;
+	margin: 0;
+	position: relative;
+}
+.backgroundForLogo{
+	width: 25vw;
+	height: 20%;
+	background-color: rgb(5, 5, 5);
+	position: absolute;
+	left: 0;
+	top: 9rem;
+	display: inline;
+	opacity: 0.6;
+}
+.leftSideBar>p{
+	font-family: norse;
+	font-size: 60px;
+	position: absolute;
+	top: 9rem;
+	right: calc(50% / 2);
+	z-index: 10;
+	color: wheat;
 }
