--- a/style.css
+++ b/style.css
@@ -114,7 +114,16 @@ form{
 	font-size: 20px;
 
 }
-input{
+input:focus{
+	border-color: rgb(51, 105, 223);
+	border-width: 2px;
+	outline: none;
+	box-shadow: 1px 3px 11px 2px rgb(195 197 199)
+}
+input:invalid {
+	border-color: rgb(155, 7, 32);
+  }
+li>input{
 	width: 20rem;
 	padding:10px;
 	margin-left: 3rem;
@@ -140,13 +149,14 @@ form header{
 	font-weight: 500;
 }
 .leftSideBar{
-	height: 100vh;
+	height: 100%;
+	width: 25%;
 	padding: 0;
 	margin: 0;
 	position: relative;
 }
 .backgroundForLogo{
-	width: 25vw;
+	width: 100%;
 	height: 20%;
 	background-color: rgb(5, 5, 5);
 	position: absolute;
@@ -159,8 +169,32 @@ form header{
 	font-family: norse;
 	font-size: 60px;
 	position: absolute;
-	top: 9rem;
-	right: calc(50% / 2);
+	top: 15%;
+	left: 45%;
 	z-index: 10;
 	color: wheat;
+	height: 50%;
+	width: 30%;
+}
+#odin{
+	width: 25%;
+	height: 80%;
+	position: absolute;
+	top: 10%;
+	left:10%;
+}
+.leftSideBar> p:last-child{
+	position: absolute;
+	top: 90%;
+	left: 20%;
+	width:50px;
+	height: 8px;
+	display: inline;
+	font-family: 'Times New Roman', Times, serif;
+	white-space: nowrap;
+	font-size: 20px;
+	color: white;
+}
+.leftSideBar> p a{
+	color:white;
 }
