--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 	line-height: 1;
 	margin: 0;
 	padding:0;
+	height: 100vh;
 }
 ol, ul {
 	list-style: none;
@@ -124,7 +125,7 @@ input:invalid {
 	border-color: rgb(155, 7, 32);
   }
 li>input{
-	width: 20rem;
+	width: 15vw;
 	padding:10px;
 	margin-left: 3rem;
 	border-radius: 10px;
@@ -156,7 +157,7 @@ form header{
 	position: relative;
 }
 .backgroundForLogo{
-	width: 100%;
+	width: 25vw;
 	height: 20%;
 	background-color: rgb(5, 5, 5);
 	position: absolute;
@@ -165,16 +166,18 @@ form header{
 	display: inline;
 	opacity: 0.6;
 }
-.leftSideBar>p{
+.backgroundForLogo>p{
 	font-family: norse;
 	font-size: 60px;
 	position: absolute;
-	top: 15%;
-	left: 45%;
+	top: 5%;
+	bottom: 100%;
+	right:10px;
 	z-index: 10;
-	color: wheat;
-	height: 50%;
-	width: 30%;
+	color: white;
+	height: max(50%,30%);
+	width: 60%;
+	padding: 0;
 }
 #odin{
 	width: 25%;
@@ -187,11 +190,11 @@ form header{
 	position: absolute;
 	top: 90%;
 	left: 20%;
-	width:50px;
+	width:70%;
 	height: 8px;
-	display: inline;
+	
 	font-family: 'Times New Roman', Times, serif;
-	white-space: nowrap;
+	white-space: normal;
 	font-size: 20px;
 	color: white;
 }
